# kronos

./: .gitignore  README.md  kronos.cabal  test-program.conor
src/: Command.hs  Environment.hs  Eval.hs  Expression.hs  Interpreter.hs  Main.hs  Program.hs  Statement.hs  StaticAnalysis.hs
