name:                kronos
version:             0.1.0.0
synopsis:            Time travelling interpreter
description:         Please see README.md
homepage:            https://github.com/githubuser/kronos#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Brennan
maintainer:          brennc27@tcd.ie
copyright:           2016 Conor Brennan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kronos
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       containers,
                       mtl
  other-modules:       Interpreter,
                       Environment,
                       Eval,
                       Expression,
                       Program,
                       Statement
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/c-brenn/kronos
